tdf#162351 tdf#130857 qt weld: Add basic QtInstanceButton

Add a very basic native Qt implementation for `weld::Button`.
It currently doesn't really implement many methods and
just triggers an assert when they get called.

Change-Id: I7a15266e978ca3bb030c847822a82d8d58c4c189
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171549
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>